# GraphSim

./: .gitignore  CMakeLists.txt  README.md  demo.py  pyproject.toml  tasks.py
.github/workflows/: workflow.yml
docs/: conf.py  index.md
docs/api/: GraphSim.rst  graphsim.rst  modules.rst
src/: Makefile  bindings.cpp  graphsim.cpp  graphsim.h  gstest.cpp  loccliff.cpp  loccliff.h  stabilizer.cpp  stabilizer.h
src/graphsim/: __init__.py  _core.pyi
tests/: test_bindings.py
