[project]
name = "graphstatesim"
version = "0.2.4"
description = "A fast stabilizer simulator using a graph state representation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/graphsim"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.{h,c,hpp,cpp}" }, { file = "CMakeLists.txt" }]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "cibuildwheel>=3.3.1",
    "invoke>=2.2.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "stim>=1.15.0",
]
docs = [
  "furo",
  "myst_parser >=0.13",
  "sphinx >=4.0",
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
  "sphinx-autobuild",
  "nbsphinx>=0.9.8",
]

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp312-* cp313-*"

test-requires = "pytest"
# Run pytest on your tests directory
test-command = "pytest {project}/tests"
